--- a/Aron.html
+++ b/Aron.html
@@ -4,7 +4,7 @@
 		<link type="text/css" rel="stylesheet" href="css.css"/>
 		<title></title>
 	</head>
-	<body background="http://ministry127.com/sites/default/files/Servant's%20Resume-background.jpg">
+	<body style="background-color: #F5DEB3">
 		<div id="header">
 			<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2LKemJPldtMC3Bx9k7v-tThYfN30nPK7NqSkOhCoALaYzs0u0-A">
 			<p id="name">Mark Aron A. Calawen</p>
@@ -18,22 +18,22 @@
 			<p>Gender: Male</p>
 
 		</div>
-		<div class="right">
+		<div class="right" style="color:black">
 			<h4>Objective</h4>
-			<p>To take a position as a ERP consultant.</p>
+			<p style="color:black">To take a position as a ERP consultant.</p>
 			<h4>Experience</h4>
-			<p>Junior Developer, Software Company (2010 - Present)</p>
-			<ul>
+			<p style="color:black">Junior Developer, Software Company (2010 - Present)</p>
+			<ul style="color:black">
 				<li>Designed and implemented end-user features for Flagship Product</li>
 				<li>Wrote third-party JavaScript and Ruby libraries</li>
 			</ul>
 			<h4>Skills</h4>
-			<p>Languages: C#, JavaScript, Python, Ruby</p>
-			<p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
-			<p>Database/Programming: SQL * PLUS, C#</p>
+			<p style="color:black">Languages: C#, JavaScript, Python, Ruby</p>
+			<p style="color:black">Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
+			<p style="color:black">Database/Programming: SQL * PLUS, C#</p>
 			<h4>Education</h4>
-			<p>BS Information Technology, Just There University</p>
-			<ul>
+			<p style="color:black">BS Information Technology, Just There University</p>
+			<ul style="color:black">
 				<li>Award for Best Student ever enrolled</li>
 				<li>GPA: 3.8</li>
 			</ul>
