--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/download.jpeg" alt="">
                     <div class="intro-text">
-                        <span class="name">Click Me Ninja!</span>
+                        <span class="name">Mark Aron Calawen</span>
                         <hr class="star-light">
-                        <span class="skills">Ninja Developer - Ninja Artist - Ninja Experience Designer</span>
+                        <span class="skills">Developer - Artist - Designer</span>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/bb.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/website.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/aa.jpg" class="img-responsive" alt="" height="900" width="650">
+                        <img src="img/portfolio/resume.png" class="img-responsive" alt="" height="900" width="650">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -306,8 +306,8 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/bb.jpg" class="img-responsive img-centered" alt="">
-                            <p>This is Ninja 3. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/website.png" class="img-responsive img-centered" alt="">
+                            <a href="https://markaron123.github.io/recommendation/index.html">Click Here</a>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -380,8 +380,8 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/aa.jpg" class="img-responsive img-centered" alt="" height="900" width="650">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="" height="900" width="650">
+                            <a href="Aron.html">Click Here</a>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
