--- a/index.html
+++ b/index.html
@@ -331,7 +331,21 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="container">
+ -                <div class="row">
+ -                    <div class="col-lg-8 col-lg-offset-2">
+ -                        <div class="modal-body">
+ -                            <h2>Resume</h2>
+ -                            <hr class="star-primary">
+ -                            <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="" height="900" width="650">
+ -                            <a href="Aron.html">Click Here</a>
+ -                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+ -                        </div>
+ -                    </div>
+ -                </div>
+ -            </div>
+ -        </div>
+ -    </div>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
