--- a/index.html
+++ b/index.html
@@ -122,7 +122,36 @@
                         <img src="img/portfolio/resume.png" class="img-responsive" alt="" height="900" width="650">
                     </a>
                 </div>
-                
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -331,21 +360,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
- -                <div class="row">
- -                    <div class="col-lg-8 col-lg-offset-2">
- -                        <div class="modal-body">
- -                            <h2>Resume</h2>
- -                            <hr class="star-primary">
- -                            <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="" height="900" width="650">
- -                            <a href="Aron.html">Click Here</a>
- -                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
- -                        </div>
- -                    </div>
- -                </div>
- -            </div>
- -        </div>
- -    </div>
+            
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
