--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <h2>My Website</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/website.png" class="img-responsive img-centered" alt="">
-                            <a href="https://markaron123.github.io/recommendation/index.html">Click Here</a>
+                            <a href="https://markaron123.github.io/recommendation/index.html">Click Here</a><br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -299,22 +299,10 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>This is where the link to my resume<a href="Aron.html"></p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="">
+                            <p>This is where the link to my resume</p>
+                            <a href="Aron.html">Click Here</a>
+                            <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
