--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/resume.png" class="img-responsive" alt="" height="900" width="650">
+                        <img src="img/portfolio/cake.png" class="img-responsive" alt="" height="900" width="650">
                     </a>
                 </div>
             </div>
