--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/website.png" class="img-responsive" alt="My Website">
+                        <img src="img/portfolio/website.png" class="img-responsive" alt="My Website" style="height:900;width:650">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/resume.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/resume.png" class="img-responsive" alt="" style="height:900;width:650">
                     </a>
                 </div>
                  <div class="col-sm-4 portfolio-item">
