--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -102,7 +102,7 @@
                         <img src="img/portfolio/website.png" class="img-responsive" alt="My Website" style="height:900;width:650">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -112,7 +112,7 @@
                         <img src="img/portfolio/resume.png" class="img-responsive" alt="" style="height:900;width:650">
                     </a>
                 </div>
-                 <div class="col-sm-4 portfolio-item">
+                 <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -122,7 +122,7 @@
                         <img src="img/portfolio/One.png" class="img-responsive" alt="" style="height:900;width:650">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -132,7 +132,7 @@
                         <img src="img/portfolio/game.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -142,7 +142,7 @@
                         <img src="img/portfolio/safe.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-md-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
