--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/resume.png" class="img-responsive img-centered" alt="" height="900" width="650">
-                            <a href="Aron.html">Click Here</a>
+                            <img src="img/portfolio/One.png" class="img-responsive img-centered" alt="" height="900" width="650">
+                            <a href="https://markaron123.github.io/onepage/">Click Here</a>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
