--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/watches.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 portfolio-item">
@@ -347,21 +347,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Onepage</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/One.png" class="img-responsive img-centered" alt="" height="900" width="650">
                             <a href="https://markaron123.github.io/onepage/">Click Here</a>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://markaron123.github.io">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="http://markaron123.github.io">2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="http://markaron123.github.io">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -384,10 +384,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Ecommerce</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/watches.png" class="img-responsive img-centered" alt="" height="900" width="650">
+                            <a href="https://markaron123.github.io/watches/">Click Here</a>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
